Added stuff (chat messages etc)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
             </div>
             <div id="chat-window">
-
+                <p class="chat-message black">
+                    White to play, good luck!
+                </p>
             </div>
         </div>
         <script src="main.js"></script>
